syntax = "proto3";

package simpledb;

service SimpleDb {
    rpc DelKVCaller(KeyMsg) returns (OkMsg);
    rpc DiscoverNodesCaller(RemoteNodesMsg) returns (RemoteNodesMsg);
    rpc GetHostInfoCaller(Empty) returns (HostStatsReplyMsg);
    rpc GetKVCaller(KeyMsg) returns (KeyValueMsg);
    rpc GetNodesCaller(Empty) returns (RemoteNodesMsg);
    rpc HeartbeatCaller(RemoteNodesMsg) returns (OkMsg);
    rpc JoinNodesCaller(RemoteNodeMsg) returns (RemoteNodesMsg);
    rpc SetKVCaller(KeyValueMsg) returns (OkMsg);
    rpc TransferKVCaller(KeyValuesMsg) returns (OkMsg);
}

message Empty {}

message HostStatsReplyMsg {
    string totalMemory = 1;
    string usedMemory = 2;
    string totalSpace = 3;
    string usedSpace = 4;
    string numCores = 5;
    string cpuPercent = 6;
    string os = 7;
    string hostname = 8;
    string uptime = 9;
}

message KeyMsg { string key = 1; }

message KeyValueMsg {
    string key = 1;
    string value = 2;
}

message KeyValuesMsg { repeated KeyValueMsg pairs = 1; }

message OkMsg { bool Ok = 1; }

message RemoteNodeMsg {
    bytes id = 1;
    string addr = 2;
    string raftAddr = 3;
    string httpAddr = 4;
    bool isLeader = 5;
    bool isElection = 6;
}

message RemoteNodesMsg { repeated RemoteNodeMsg remoteNodes = 1; }
